--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 <link rel="stylesheet" href="plugins/slick/slick.css">
 
 <!-- Main Stylesheet -->
-<link rel="stylesheet" href="css/style.css">
+<!-- <link rel="stylesheet" href="css/style.css"> -->
 <title>React App</title>
 </head>
 
