--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" translate="no">
 <!-- Basic Page Needs
   ================================================== -->
 <meta charset="utf-8">
@@ -30,7 +30,7 @@
 
 <!-- Main Stylesheet -->
 <!-- <link rel="stylesheet" href="css/style.css"> -->
-<title>React App</title>
+<!-- <title>React App</title> -->
 </head>
 
 <body>
