--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
 <meta charset="utf-8">
 <title>RS Paru dr. Ario Wirawan Salatiga – Rumah Sakit Paru Dokter Ario Wirawan Salatiga</title>
 
+<!-- try cors -->
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-request">
+
 <!-- Mobile Specific Metas
   ================================================== -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
