--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
 <!-- <meta http-equiv="Content-Security-Policy"
   content="default-src 'self' ; img-src '*' data:* ; frame-src https://maps.google.com/ youtube.com www.youtube.com ; font-src * ;"> -->
 <meta http-equiv="Content-Security-Policy" content="default-src * '*' ">
+<meta http-equiv="Content-Security-Policy" content="img-src * '*' ">
+<meta http-equiv="Content-Security-Policy" content="frame-src * '*' ">
 <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
 <meta http-equiv="X-Content-Type-Options" content="nosniff">
 <meta http-equiv="Referrer-Policy" content="no-referrer">
