--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
   content="default-src 'self' ; img-src '*' data:* ; frame-src https://maps.google.com/ youtube.com www.youtube.com ; font-src * ;"> -->
 <meta http-equiv="Content-Security-Policy" content="default-src * '*' ">
 <meta http-equiv="Content-Security-Policy" content="img-src data:* ">
+<meta http-equiv="Content-Security-Policy" content="script-src https://maps.googleapis.com/ ">
 <meta http-equiv="Content-Security-Policy"
   content="frame-src https://maps.google.com/ youtube.com www.youtube.com https://www.youtube.com ">
 <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
