--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 <meta http-equiv="Content-Security-Policy" content="
  script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.googleapis.com https://*.gstatic.com *.google.com https://*.ggpht.com *.googleusercontent.com blob:;
 img-src 'self' https://*.googleapis.com https://*.gstatic.com *.google.com  *.googleusercontent.com data:;
-frame-src *.google.com;
+frame-src *.google.com *.youtube.com/;
 connect-src 'self' https://*.googleapis.com *.google.com https://*.gstatic.com  data: blob:;
 font-src https://fonts.gstatic.com;
 style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
